# th-deploy-monitoring

./: .editorconfig  .envrc  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  pyproject.toml  renovate.json5
.github/: dependabot.yml
.github/workflows/: linters.yml  pylint.yml
assets/alloy/: collect_loki.alloy  collect_otel.alloy  collect_prometheus.alloy  discovery_blackbox.alloy  discovery_cadvisor.alloy  discovery_self.alloy  discovery_static.alloy  discovery_unix.alloy  export_grafanacloud.alloy  export_mimir.alloy  live_debugging.alloy  process_otel.alloy
assets/docker/grafana/: Dockerfile
assets/docker/node-exporter/: Dockerfile
assets/docker/prometheus/: Dockerfile
assets/docker/speedtest-exporter/: Dockerfile
assets/grafana/provisioning/datasources/: datasources.yml
assets/mimir/: config.yaml
assets/prometheus/: prometheus.yml
monitoring/: alloy.py  alloy_legacy.py  blackbox_exporter.py  blackbox_exporter_legacy.py  cadvisor.py  cadvisor_legacy.py  cloudflare.py  config.py  grafana.py  grafana_legacy.py  main.py  main_legacy.py  mimir.py  mimir_legacy.py  node_exporter.py  prometheus.py  prometheus_legacy.py  speedtest.py  speedtest_legacy.py  utils.py
scripts/: alloy-fmt
