[project]
name = "monitoring"
version = "0.1.0"
description = ""
authors = [{ name = "Tobias Henkel", email = "tobias.henkel@bmw.de" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pulumi-command==1.0.1",
    "pulumi-docker==4.5.7",
    "pulumi==3.142.0",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = ["black>=24.10.0", "isort>=5.13.2", "pylint>=3.3.2", "flake8>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
